--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="mengkun">
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp">
-    < title >老新的收款码</ title >
+    </ title >老新的收款码</ title >
     
     <script>
     /*
