--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="code-area">
             <img id="qq-url" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWNgYGBgAAAABQABh6FO1AAAAABJRU5ErkJggg==">
         </div>
-        <div class="code-footer">长按以上二维码向我付款™QQ1966843839</div>
+        <div class="code-footer">长按以上二维码向我付款™QQ1966843839（By老新）</div>
     </div>
     
     <!-- 微信二维码展示区域 -->
@@ -128,7 +128,7 @@
         <div class="code-area">
             <img id="wechat-url" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWNgYGBgAAAABQABh6FO1AAAAABJRU5ErkJggg==">
         </div>
-        <div class="code-footer">长按以上二维码向付款™微信laoxin6969</div>
+        <div class="code-footer">长按以上二维码向付款™微信laoxin6969（By老新）</div>
     </div>
     
     <script>
