--- a/shuangpay.html
+++ b/shuangpay.html
@@ -128,7 +128,7 @@
         <div class="code-area">
             <img id="wechat-url" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWNgYGBgAAAABQABh6FO1AAAAABJRU5ErkJggg==">
         </div>
-        <div class="code-footer">长按以上二维码向付款    ™2414541110（By双）</div>
+        <div class="code-footer">长按以上二维码向我付款™QQ2414541110（By双）</div>
     </div>
     
     <script>
