--- a/lxhb.html
+++ b/lxhb.html
@@ -45,7 +45,7 @@ const btn = document.querySelector('#blueBtn');
 btn.addEventListener('click', () => {
   const input = document.createElement('input');
   document.body.appendChild(input);
-  input.setAttribute('value', '8qLFUA67Kx');
+  input.setAttribute('value', '589507373');
   input.select();
   if (document.execCommand('copy')) {
     document.execCommand('copy');
