--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 */
 body {
 	text-align: center;
-    background-image:url('img/bg.png') !important;
+    background-image:url('bg.png') !important;
  /*可换上面的图片地址*/
     background-size: 100% !important;
     background-repeat: no-repeat;
@@ -100,7 +100,7 @@ body {
 	float: right;
 	width: 35px;
 	height: 40px;
-	background: url(img/clear.png) no-repeat center;
+	background: url(clear.png) no-repeat center;
 	background-size: 16px;
 }
 .search_bar .si {
@@ -448,7 +448,7 @@ body {
 <br />
 <div class="search_part">
 <br /><br /><br /><br /><br /><br /><br /><br /><br />
-<img class="smaller" src="img/google12345.gif" width=33% ></img>
+<img class="smaller" src="google12345.gif" width=33% ></img>
 <form id="search_form" onsubmit="return search()" class="search_bar">
 <input type="submit" id="search_submit" value="✿" >
 <span><i id="clear" onclick="clear_seach()"></i><div class="si"><input class="search" type="text" value="" onkeyup="get_suggest()" onfocus="get_suggest()" onpaste="get_suggest()" autocomplete="off" id="search_input" placeholder="✎...  苟利国家生死以～" ></div>
@@ -466,25 +466,25 @@ body {
 
 <div class="box">
 <a href="https://www.baidu.com/?tn=simple"></a>
-<p><img class="icon" src="img/Baidu.png" ></p>
+<p><img class="icon" src="Baidu.png" ></p>
 <p class="url">百度</p>
 </div>
 
 <div class="box">
 <a href="history://"></a>
-<p><img class="icon" src="img/lishi.png" ></p>
+<p><img class="icon" src="lishi.png" ></p>
 <p class="url">足迹</p>
 </div>
 
 <div class="box">
 <a href="https://www.moe123.net/m"></a>
-<p><img class="icon" src="img/Wikipedia.png" ></p>
+<p><img class="icon" src="Wikipedia.png" ></p>
 <p class="url">导航</p>
 </div>
 
 <div class="box">
 <a href="folder://"></a>
-<p><img class="icon" src="img/shuqian.png" ></p>
+<p><img class="icon" src="shuqian.png" ></p>
 <p class="url">书签</p>
 </div>
 
