--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ body {
 <br />
 <div class="search_part">
 <br /><br /><br /><br /><br /><br /><br /><br /><br />
-<img class="smaller" src="google12345.gif" width=33% ></img>
+<img class="smaller" src="google.gif" width=33% ></img>
 <form id="search_form" onsubmit="return search()" class="search_bar">
 <input type="submit" id="search_submit" value="✿" >
 <span><i id="clear" onclick="clear_seach()"></i><div class="si"><input class="search" type="text" value="" onkeyup="get_suggest()" onfocus="get_suggest()" onpaste="get_suggest()" autocomplete="off" id="search_input" placeholder="✎...  苟利国家生死以～" ></div>
